# SshFileTransfer

./: .gitignore  Cargo.toml  README.md  config.example.json  config.example.toml  config.example.yaml  run.example.py
src/: cli.rs  error.rs  lib.rs  main.rs  progress.rs  sftp_downloader.rs  ssh_client.rs
