[package]
name = "sftp-download"
version = "0.1.0"
edition = "2021"
description = "SSH/SFTP file and directory download tool"
license = "MIT"

[dependencies]
# SSH/SFTP
russh = "0.45"
russh-sftp = "2.3"
russh-keys = "0.45"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Progress bar
indicatif = "0.17"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
